--- a/VAE_inference.ipynb
+++ b/VAE_inference.ipynb
@@ -2,18 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading model file...\n",
-      "Download complete.\n",
-      "Downloading checkpoint: checkpoint49_2024-03-28_Zdim_2_Vae-beta_20.0_Lr_0.0001_Batch-size_128_washu120_subsample10_train100_val10.pth.tar\n",
-      "Downloading checkpoint: checkpoint49_2024-06-21_Zdim_4_Vae-beta_20.0_Lr_0.0001_Batch-size_128_washu120_subsample10_train100_val10.pth.tar\n",
-      "Downloading checkpoint: checkpoint49_2024-11-28_Zdim_3_Vae-beta_20.0_Lr_0.0001_Batch-size_128_washu120_subsample10_train100_val10.pth.tar\n"
+      "fMRIVAE_Model.py already exists. Skipping download.\n"
      ]
     }
    ],
@@ -50,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,10 +68,11 @@
     "batch_size = 16  # How many samples per saved file\n",
     "seed = 42\n",
     "zdim = 2 # latent dimension\n",
-    "data_path = '/content/fmri_data/'        # Customize this path\n",
-    "z_path = '/content/vae_output/latent/' \n",
+    "data_path = 'data/Lynch2024_45subj_Prior_20NetsParcel'        # Customize this path\n",
+    "dataset_name = 'Lynch2024_45subj'\n",
+    "z_path = f'results/{dataset_name}/z/' \n",
     "resume = 'Checkpoint/checkpoint49_2024-03-28_Zdim_2_Vae-beta_20.0_Lr_0.0001_Batch-size_128_washu120_subsample10_train100_val10.pth.tar' # should correspond with zdim\n",
-    "img_path = '/content/vae_output/recon/'\n",
+    "img_path = 'results/{dataset_name}/recon/'\n",
     "mode = 'encode'  # 'encode', 'decode', or 'both'\n",
     "debug = True\n",
     "\n",
@@ -91,9 +88,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-03-27 00:00:46,735 - INFO - Using device: cpu\n"
+     ]
+    }
+   ],
    "source": [
     "# set seed and device\n",
     "torch.manual_seed(seed)\n",
@@ -103,9 +108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-03-27 00:00:46,907 - INFO - Checkpoint loaded successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "# load model\n",
     "model = BetaVAE(z_dim=zdim, nc=1).to(device)\n",
@@ -119,9 +132,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-03-27 00:00:46,919 - INFO - Starting encoding process...\n",
+      "2025-03-27 00:00:47,281 - DEBUG - Encoded batch 0\n",
+      "2025-03-27 00:00:47,484 - DEBUG - Encoded batch 1\n"
+     ]
+    }
+   ],
    "source": [
     "if mode in ['encode', 'both']:\n",
     "    logging.info(\"Starting encoding process...\")\n",
