--- a/format_fsLR32k_to_192by192.ipynb
+++ b/format_fsLR32k_to_192by192.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,14 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<nibabel.cifti2.cifti2_axes.SeriesAxis object at 0x7f8ec4736d30>\n"
+     "ename": "TypeError",
+     "evalue": "'module' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 18\u001b[0m\n\u001b[1;32m     16\u001b[0m cifti_data \u001b[38;5;241m=\u001b[39m cifti_img\u001b[38;5;241m.\u001b[39mget_fdata()\n\u001b[1;32m     17\u001b[0m cifti_header \u001b[38;5;241m=\u001b[39m cifti_img\u001b[38;5;241m.\u001b[39mheader\n\u001b[0;32m---> 18\u001b[0m cifti_axes \u001b[38;5;241m=\u001b[39m \u001b[43mnib\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcifti2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcifti2_axes\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcifti_img\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     19\u001b[0m bm_axes \u001b[38;5;241m=\u001b[39m cifti_axes[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;66;03m# brain model axis\u001b[39;00m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(bm_axes))\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'module' object is not callable"
      ]
     }
    ],
@@ -76,8 +80,8 @@
     "cifti_img = nib.load(cifti2_path)\n",
     "cifti_data = cifti_img.get_fdata()\n",
     "cifti_header = cifti_img.header\n",
-    "cifti_axes = cifti_header.get_axis(0)\n",
-    "print(cifti_axes)"
+    "\n",
+    "print(type(bm_axes))"
    ]
   },
   {
