--- a/format_fsLR32k_to_192by192.ipynb
+++ b/format_fsLR32k_to_192by192.ipynb
@@ -51,14 +51,50 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'module' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 18\u001b[0m\n\u001b[1;32m     16\u001b[0m cifti_data \u001b[38;5;241m=\u001b[39m cifti_img\u001b[38;5;241m.\u001b[39mget_fdata()\n\u001b[1;32m     17\u001b[0m cifti_header \u001b[38;5;241m=\u001b[39m cifti_img\u001b[38;5;241m.\u001b[39mheader\n\u001b[0;32m---> 18\u001b[0m cifti_axes \u001b[38;5;241m=\u001b[39m \u001b[43mnib\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcifti2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcifti2_axes\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcifti_img\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     19\u001b[0m bm_axes \u001b[38;5;241m=\u001b[39m cifti_axes[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;66;03m# brain model axis\u001b[39;00m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(bm_axes))\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'module' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(59412, 217)\n",
+      "[False False False False False  True  True  True  True  True  True  True\n",
+      "  True  True  True  True  True  True  True  True False  True  True  True\n",
+      "  True  True  True  True  True False False False False False False False\n",
+      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
+      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
+      "  True  True  True  True  True  True False  True  True  True  True  True\n",
+      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
+      "  True  True False False False False False False False False False False\n",
+      " False False False False False False  True  True  True  True  True  True\n",
+      "  True  True  True  True  True  True False  True  True  True  True  True\n",
+      "  True  True  True  True False False False False  True  True  True  True\n",
+      "  True  True  True False False False False False  True  True  True  True\n",
+      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
+      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
+      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
+      "  True  True  True  True  True  True  True  True  True  True False False\n",
+      " False False False False False False False False False False False False\n",
+      "  True  True  True  True  True  True  True False False False False False\n",
+      " False False  True  True  True  True  True  True  True  True  True  True\n",
+      "  True  True  True False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False  True  True  True  True  True  True False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      "  True  True  True  True  True  True False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False  True  True  True  True\n",
+      "  True  True  True False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False  True  True  True  True  True  True  True  True\n",
+      "  True  True False False False False False False False False False False\n",
+      " False False False False  True  True  True  True  True  True  True False\n",
+      " False False False False False False False False False False False  True\n",
+      "  True  True  True  True  True  True  True  True  True  True False False]\n"
      ]
     }
    ],
@@ -73,15 +109,29 @@
     "subj, cifti1_path = cifti_cohort_df.iloc[example_idx, :2].tolist()\n",
     "tmask_subj, tmask_path = tmask_cohort_df.iloc[example_idx, :].tolist()\n",
     "assert subj == tmask_subj\n",
-    "tmask = np.loadtxt(tmask_path, dtype=int)\n",
+    "tmask = np.loadtxt(tmask_path, dtype=int).astype(bool)\n",
     "\n",
     "cifti2_path = cifti2_filename(cifti1_path, \"./data/washu120/\")\n",
     "\n",
     "cifti_img = nib.load(cifti2_path)\n",
     "cifti_data = cifti_img.get_fdata()\n",
     "cifti_header = cifti_img.header\n",
+    "bm_index_map = cifti_img.header.get_index_map(1)\n",
     "\n",
-    "print(type(bm_axes))"
+    "# Initialize storage\n",
+    "vertex_indices = []\n",
+    "# Loop through the brain models in the index map\n",
+    "for bm in bm_index_map.brain_models:\n",
+    "    structure = bm.brain_structure\n",
+    "    if structure in ['CIFTI_STRUCTURE_CORTEX_LEFT', 'CIFTI_STRUCTURE_CORTEX_RIGHT']:\n",
+    "        # Convert Cifti2VertexIndices to numpy array\n",
+    "        offset = bm.index_offset\n",
+    "        count = bm.index_count\n",
+    "        vertex_indices.extend(range(offset, offset + count))\n",
+    "\n",
+    "vertex_indices = np.array(vertex_indices)\n",
+    "cortex_ts = np.transpose(cifti_data[:, vertex_indices])\n",
+    "masked_cortex_ts = cortex_ts[:, tmask]"
    ]
   },
   {
