--- a/format_fsLR32k_to_192by192.ipynb
+++ b/format_fsLR32k_to_192by192.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import nibabel as nib\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import os"
+    "import os\n",
+    "import scipy.io as sio"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,13 +37,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calc_correlations(input_file, tmask):\n",
     "    if input_file.endswith(\".dtseries.nii\"):\n",
-    "        cifti_img = nib.load(input_file)\n"
+    "        cifti_img = nib.load(input_file)\n",
+    "        cifti_data = cifti_img.get_fdata()\n",
+    "        # cifti_header = cifti_img.header\n",
+    "        bm_index_map = cifti_img.header.get_index_map(1)\n",
+    "\n",
+    "        # Initialize storage\n",
+    "        vertex_indices = []\n",
+    "        # Loop through the brain models in the index map\n",
+    "        for bm in bm_index_map.brain_models:\n",
+    "            structure = bm.brain_structure\n",
+    "            if structure in ['CIFTI_STRUCTURE_CORTEX_LEFT', 'CIFTI_STRUCTURE_CORTEX_RIGHT']:\n",
+    "                # Convert Cifti2VertexIndices to numpy array\n",
+    "                offset = bm.index_offset\n",
+    "                count = bm.index_count\n",
+    "                vertex_indices.extend(range(offset, offset + count))\n",
+    "\n",
+    "        vertex_indices = np.array(vertex_indices)\n",
+    "        cortex_ts = np.transpose(cifti_data[:, vertex_indices])\n",
+    "        masked_cortex_ts = cortex_ts[:, tmask]\n",
+    "        corr_matrix = np.corrcoef(masked_cortex_ts)\n",
+    "        return corr_matrix\n",
+    "    else:\n",
+    "        raise ValueError(\"Input file must be a CIFTI-2 time-series file. \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def format_data(corr_vec, transmat_path, img_size, rand_permutation, interval):\n",
+    "    assert corr_vec.shape == (59412, )\n",
+    "    left_data, right_data = corr_vec[:29697], corr_vec[29697:]\n",
+    "    left_transmat = sio.loadmat(os.path.join(transmat_path, \"Left_fMRI2Grid_192_by_192_NN.mat\"))\n",
+    "    right_transmat = sio.loadmat(os.path.join(transmat_path, \"Right_fMRI2Grid_192_by_192_NN.mat\"))\n",
+    "    \n"
    ]
   },
   {
@@ -54,47 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(59412, 217)\n",
-      "[False False False False False  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True False  True  True  True\n",
-      "  True  True  True  True  True False False False False False False False\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True False  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True False False False False False False False False False False\n",
-      " False False False False False False  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True False  True  True  True  True  True\n",
-      "  True  True  True  True False False False False  True  True  True  True\n",
-      "  True  True  True False False False False False  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True False False\n",
-      " False False False False False False False False False False False False\n",
-      "  True  True  True  True  True  True  True False False False False False\n",
-      " False False  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True False False False False False False False False False\n",
-      " False False False False False False False False False False False False\n",
-      " False False False False False False False False False False False False\n",
-      " False False False False False False False False False False False False\n",
-      " False False False False  True  True  True  True  True  True False False\n",
-      " False False False False False False False False False False False False\n",
-      " False False False False False False False False False False False False\n",
-      " False False False False False False False False False False False False\n",
-      " False False False False False False False False False False False False\n",
-      " False False False False False False False False False False False False\n",
-      "  True  True  True  True  True  True False False False False False False\n",
-      " False False False False False False False False False False False False\n",
-      " False False False False False False False False  True  True  True  True\n",
-      "  True  True  True False False False False False False False False False\n",
-      " False False False False False False False False False False False False\n",
-      " False False False False False False False False False False False False\n",
-      " False False False False  True  True  True  True  True  True  True  True\n",
-      "  True  True False False False False False False False False False False\n",
-      " False False False False  True  True  True  True  True  True  True False\n",
-      " False False False False False False False False False False False  True\n",
-      "  True  True  True  True  True  True  True  True  True  True False False]\n"
+      "(59412, 59412)\n"
      ]
     }
    ],
@@ -131,7 +128,9 @@
     "\n",
     "vertex_indices = np.array(vertex_indices)\n",
     "cortex_ts = np.transpose(cifti_data[:, vertex_indices])\n",
-    "masked_cortex_ts = cortex_ts[:, tmask]"
+    "masked_cortex_ts = cortex_ts[:, tmask]\n",
+    "corr_matrix = np.corrcoef(masked_cortex_ts)\n",
+    "# print(corr_matrix.shape)"
    ]
   },
   {
