--- a/format_fsLR32k_to_192by192.ipynb
+++ b/format_fsLR32k_to_192by192.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,27 +74,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def format_data(corr_vec, transmat_path, img_size, rand_permutation, interval):\n",
-    "    assert corr_vec.shape == (59412, )\n",
-    "    left_data, right_data = corr_vec[:29697], corr_vec[29697:]\n",
+    "def format_data(corrs, transmat_path, img_size, rand_permutation, interval):\n",
+    "    # assert corrs.shape == (59412, )\n",
+    "    left_data, right_data = corrs[:29697, :], corrs[29697:, :]\n",
     "    left_transmat = sio.loadmat(os.path.join(transmat_path, \"Left_fMRI2Grid_192_by_192_NN.mat\"))\n",
     "    right_transmat = sio.loadmat(os.path.join(transmat_path, \"Right_fMRI2Grid_192_by_192_NN.mat\"))\n",
-    "    \n"
+    "    \n",
+    "    left_surf_data = np.reshape(left_transmat['grid_mapping'] @ left_data, (img_size, img_size, 1, -1), order='F')\n",
+    "    right_surf_data = np.reshape(right_transmat['grid_mapping'] @ right_data, (img_size, img_size, 1, -1), order='F')\n",
+    "\n",
+    "    return left_surf_data, right_surf_data\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(59412, 59412)\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "def model_inference():\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def visualize_representations():\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "example_cifti_cohort_filepath = \"./data/cohort_files/cohortfiles_washu120.txt\"\n",
     "example_tmask_cohort_filepath = \"./data/tmask_files/tmasklist_washu120.txt\"\n",
@@ -131,6 +148,27 @@
     "masked_cortex_ts = cortex_ts[:, tmask]\n",
     "corr_matrix = np.corrcoef(masked_cortex_ts)\n",
     "# print(corr_matrix.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(36864, 29696)\n"
+     ]
+    }
+   ],
+   "source": [
+    "transmat_path = \"./mask\"\n",
+    "left_mask_struct = sio.loadmat(os.path.join(transmat_path, \"Left_fMRI2Grid_192_by_192_NN.mat\"))\n",
+    "left_mask = left_mask_struct['grid_mapping']\n",
+    "print(left_mask.shape)\n",
+    "# mask = sio.loadmat(os.path.join(transmat_path, \"MSE_Mask.mat\"))"
    ]
   },
   {
