--- a/format_fsLR32k_to_192by192.ipynb
+++ b/format_fsLR32k_to_192by192.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
-    "import scipy.io as sio"
+    "import scipy.io as sio\n",
+    "import torch"
    ]
   },
   {
@@ -70,11 +71,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def format_data(corrs, transmat_path, img_size, rand_permutation, interval):\n",
+    "def format_data(corrs, transmat_path, img_size):\n",
     "    # assert corrs.shape == (59412, )\n",
     "    left_data, right_data = corrs[:29697, :], corrs[29697:, :]\n",
     "    left_transmat = sio.loadmat(os.path.join(transmat_path, \"Left_fMRI2Grid_192_by_192_NN.mat\"))\n",
@@ -83,8 +84,7 @@
     "    left_surf_data = np.reshape(left_transmat['grid_mapping'] @ left_data, (img_size, img_size, 1, -1), order='F')\n",
     "    right_surf_data = np.reshape(right_transmat['grid_mapping'] @ right_data, (img_size, img_size, 1, -1), order='F')\n",
     "\n",
-    "    return left_surf_data, right_surf_data\n",
-    "    "
+    "    return left_surf_data, right_surf_data"
    ]
   },
   {
@@ -93,7 +93,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model_inference():\n",
+    "def rand_sample(left_surf_data, right_surf_data, sample_ratio=1.0):\n",
+    "    assert left_surf_data.shape == right_surf_data.shape\n",
+    "    if sample_ratio <= 0 or sample_ratio > 1.0:\n",
+    "        raise ValueError(\"Please pick a sample ratio between 0 and 1. \")\n",
+    "    img_size, _, _, sample_size = left_surf_data.shape\n",
+    "    indices = np.random.choice(sample_size, sample_size*sample_ratio, replace=False)\n",
+    "    sampled_left_surf_data = left_surf_data[:, :, :, indices]\n",
+    "    sampled_right_surf_data  = right_surf_data[:, :, :, indices]\n",
+    "    return sampled_left_surf_data, sampled_right_surf_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_model(zdim):\n",
+    "    pass\n",
+    "\n",
+    "def generate_loader(left_surf_data, right_surf_data, batch_size):\n",
     "    pass"
    ]
   },
@@ -103,13 +123,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def visualize_representations():\n",
+    "def model_inference(zdim, left_surf_data, right_surf_data, mode, batch_size, device):\n",
+    "    model = load_model(zdim).to(device)\n",
+    "    model.eval()\n",
+    "    inference_loader = generate_loader(left_surf_data, right_surf_data, batch_size)\n",
+    "\n",
+    "    all_z_distributions = []\n",
+    "    all_xL_recon = []\n",
+    "    all_xR_recon = []\n",
+    "    \n",
+    "    for batch_idx, (xL, xR) in enumerate(inference_loader):\n",
+    "        xL = xL.to(device)\n",
+    "        xR = xR.to(device)\n",
+    "        z_distribution = model._encode(xL, xR)\n",
+    "        all_z_distributions.append(z_distribution.cpu().numpy())\n",
+    "\n",
+    "        if mode == \"both\":\n",
+    "            mu = z_distribution[:, :zdim]\n",
+    "            z = torch.tensor(mu).to(device)\n",
+    "            xL_recon, xR_recon = model._decode(z)\n",
+    "            all_xL_recon.append(xL_recon.cpu().numpy())\n",
+    "            all_xR_recon.append(xR_recon.cpu().numpy())\n",
+    "    \n",
+    "    all_z_distributions = np.concatenate(all_z_distributions, axis=0)\n",
+    "\n",
+    "    if mode == \"encode\":\n",
+    "        return all_z_distributions\n",
+    "    elif mode == \"both\":\n",
+    "        all_xL_recon = np.concatenate(all_xL_recon, axis=0)\n",
+    "        all_xR_recon = np.concatenate(all_xR_recon, axis=0)\n",
+    "        return all_z_distributions, all_xL_recon, all_xR_recon\n",
+    "    else:\n",
+    "        raise ValueError(\"Invalid mode. Choose 'encode' or 'both'.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def visualize_representations(zs, labels):\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,14 +212,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(36864, 29696)\n"
+      "(36864, 29696)\n",
+      "(36864, 29716)\n"
      ]
     }
    ],
@@ -167,7 +228,10 @@
     "transmat_path = \"./mask\"\n",
     "left_mask_struct = sio.loadmat(os.path.join(transmat_path, \"Left_fMRI2Grid_192_by_192_NN.mat\"))\n",
     "left_mask = left_mask_struct['grid_mapping']\n",
+    "right_mask_struct = sio.loadmat(os.path.join(transmat_path, \"Right_fMRI2Grid_192_by_192_NN.mat\"))\n",
+    "right_mask = right_mask_struct['grid_mapping']\n",
     "print(left_mask.shape)\n",
+    "print(right_mask.shape)\n",
     "# mask = sio.loadmat(os.path.join(transmat_path, \"MSE_Mask.mat\"))"
    ]
   },
